src/objects/sfLma__License__c.object
<CustomObject>
    <description>An object that replicates information from the license object in the subscriber&apos;s Salesforce organization. Records are created each time a subscriber successfully installs a package.</description>
    <fields>
        <fullName>DOT_Install__c</fullName>
        <formula>IF( CONTAINS( sfLma__Lead__r.LastName , &quot;Inactive&quot;) , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <inlineHelpText>Will be Yes if this was installed by the DOT user</inlineHelpText>
        <label>DOT Install</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Install__c</fullName>
        <formula>today() - Most_Recent_Install_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days since</inlineHelpText>
        <label>Days Since Last Install</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_Package_Version_ID__c</fullName>
        <formula>sfLma__Package_Version__r.sfLma__Version_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Package Version ID from Package Version record (used for binding to global or BT tables along with subscriber org)</inlineHelpText>
        <label>Global Package Version ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Login_Date__c</fullName>
        <formula>sfLma__Account__r.Last_Login_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Login Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Months_Since_Last_Install__c</fullName>
        <formula>(today() -  Most_Recent_Install_Date__c )/30.4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Months Since Last Install</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Install_Date__c</fullName>
        <inlineHelpText>Only valid for recent installs post 10/14/09</inlineHelpText>
        <label>Most Recent Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Org_BT_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://na1.salesforce.com/admin/sysAdminHome.jsp?search=&quot;&amp;  sfLma__Subscriber_Org_ID__c  &amp;&quot;&amp;search=Search&quot;,   sfLma__Subscriber_Org_ID__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to BT Search page</inlineHelpText>
        <label>Org BT Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Edition__c</fullName>
        <label>Organization Edition</label>
        <picklist>
            <picklistValues>
                <fullName>Enterprise Edition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer Edition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandbox</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Package_Upgraded__c</fullName>
        <formula>IF( Most_Recent_Install_Date__c &gt; sfLma__Install_Date__c ,&quot;Yes&quot;, if(sfLma__Package_Version__r.Name = &quot;Contacts &amp; Organizations 1.66&quot;,&quot;Yes&quot;,&quot;No&quot; ))</formula>
        <inlineHelpText>Yes/No shows if an org upgraded</inlineHelpText>
        <label>Package Upgraded</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Version_Id__c</fullName>
        <formula>sfLma__Package_Version__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Package Version Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Version_Name_Formula__c</fullName>
        <formula>sfLma__Package_Version__r.Name</formula>
        <label>Package Version Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Version_Number__c</fullName>
        <label>Previous Version Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bogus_boolean__c</fullName>
        <defaultValue>false</defaultValue>
        <label>bogus boolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfLma__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field displays the Account associated with the license after the partner converts the Lead to an account as part of Lead Conversion process</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N30000001JvRMEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfLma__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field displays the Contact associated with the license after the partner converts the Lead to a contact as part of Lead Conversion process</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N30000001JvR6EAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfLma__Expiration_Date__c</fullName>
        <description>A formula field which displays the Expiration Date or “Does not expire&quot; based on the value in the Expiration field.</description>
        <formula>if(  sfLma__Expiration__c &lt;&gt; date(1970,1,1),text( sfLma__Expiration__c ),&quot;Does not expire&quot;)</formula>
        <label>Expiration Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Expiration__c</fullName>
        <description>Expiration Date of the License, 1/1/1970 represents a perpetual license</description>
        <label>Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sfLma__Help__c</fullName>
        <formula>(HYPERLINK(&quot;http://www.salesforce.com/docs/en/lma/index_CSH.htm#lma_license_detail.htm&quot;, &quot; Help for License&quot;)) &amp; &quot; &quot; &amp; (IMAGE(&quot;/img/btn_help.gif&quot;, &quot;Help&quot;))</formula>
        <label>Help</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Install_Date__c</fullName>
        <description>The Date this Package Version was initially installed by the developer. (Does not get updated as part of upgrades.)</description>
        <label>Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sfLma__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lead generated from this install. This field becomes blank once the lead is converted to an account / contact in the lead conversion process</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>R00N30000001JvRAEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfLma__License_Status__c</fullName>
        <formula>$RecordType.Name</formula>
        <label>License Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__License_Type__c</fullName>
        <description>This field indicates the type of license record. For example, if the license record is &quot;Read-Only&quot;, this license record cannot be modified.</description>
        <label>License Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Licensed_Seats__c</fullName>
        <description>A text field which displays the number of Licensed Seats or “Site License” based on the numeric field</description>
        <formula>IF( sfLma__Seats__c &gt;=0,  TEXT(sfLma__Seats__c ), &quot;Site License&quot;)</formula>
        <label>Licensed Seats</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Package_License_ID__c</fullName>
        <description>ID of package license for uninstall tracking</description>
        <label>Package License ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Package_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Package Version</label>
        <referenceTo>sfLma__Package_Version__c</referenceTo>
        <relationshipName>R00N30000001JvQxEAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfLma__Proxy_User__c</fullName>
        <description>Proxy user in subscriber org</description>
        <label>Proxy User</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Seats__c</fullName>
        <description>number of seats covered by license</description>
        <label>Seats</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfLma__Status__c</fullName>
        <description>This is the Status of the Package License in the Subscriber Org</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uninstalled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sfLma__Subscriber_Org_ID__c</fullName>
        <description>This is the ID of the Subscriber organization</description>
        <label>Subscriber Org ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Used_Licenses__c</fullName>
        <label>Used Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>License</label>
    <listViews>
        <fullName>Matching_Gifts_Licenses</fullName>
        <columns>NAME</columns>
        <columns>sfLma__Install_Date__c</columns>
        <columns>sfLma__Account__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Package_Version_Name_Formula__c</field>
            <operation>startsWith</operation>
            <value>Matching Gifts</value>
        </filters>
        <label>Matching Gifts Licenses</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Today_s_Signups</fullName>
        <columns>NAME</columns>
        <columns>sfLma__Account__c</columns>
        <columns>sfLma__Expiration__c</columns>
        <columns>DOT_Install__c</columns>
        <columns>sfLma__Lead__c</columns>
        <columns>sfLma__Seats__c</columns>
        <columns>sfLma__Subscriber_Org_ID__c</columns>
        <columns>sfLma__Package_Version__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Signups</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Uninstalled_Packages</fullName>
        <columns>NAME</columns>
        <columns>DOT_Install__c</columns>
        <columns>sfLma__Package_Version__c</columns>
        <columns>sfLma__Install_Date__c</columns>
        <columns>sfLma__Lead__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>sfLma__License__c.sfLma__Uninstalled</value>
        </filters>
        <label>Uninstalled Packages</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Upgraded_Licenses</fullName>
        <columns>NAME</columns>
        <columns>sfLma__Install_Date__c</columns>
        <columns>Most_Recent_Install_Date__c</columns>
        <columns>Months_Since_Last_Install__c</columns>
        <columns>sfLma__Package_Version__c</columns>
        <columns>Previous_Version_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Package_Upgraded__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>Upgraded Licenses</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>npsp_demo_licenses</fullName>
        <columns>NAME</columns>
        <columns>sfLma__Proxy_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sfLma__Subscriber_Org_ID__c</field>
            <operation>equals</operation>
            <value>00D80000000bzIN</value>
        </filters>
        <label>npsp demo licenses</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>sfLma__All</fullName>
        <columns>NAME</columns>
        <columns>sfLma__Lead__c</columns>
        <columns>sfLma__Package_Version__c</columns>
        <columns>sfLma__Licensed_Seats__c</columns>
        <columns>sfLma__Install_Date__c</columns>
        <columns>sfLma__Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>License Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Licenses</pluralLabel>
    <recordTypes>
        <fullName>sfLma__Active</fullName>
        <active>true</active>
        <label>Active</label>
    </recordTypes>
    <recordTypes>
        <fullName>sfLma__Expired</fullName>
        <active>true</active>
        <label>Expired</label>
    </recordTypes>
    <recordTypes>
        <fullName>sfLma__Suspended</fullName>
        <active>true</active>
        <label>Suspended</label>
    </recordTypes>
    <recordTypes>
        <fullName>sfLma__Trial</fullName>
        <active>true</active>
        <label>Trial</label>
    </recordTypes>
    <recordTypes>
        <fullName>sfLma__Uninstalled</fullName>
        <active>true</active>
        <label>Uninstalled</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>